Chat Wrapper Overflow issue

--- a/src/components/App/Layout.module.scss
+++ b/src/components/App/Layout.module.scss
@@ -14,11 +14,4 @@
 .rhsContent {
   padding: 20px;
   height: 100%;
-  height: calc(100vh - 160px);
-}
-
-@media only screen and (min-width: 1024px) {
-  .rhsContent {
-    height: calc(100vh - 134px);
-  }
 }
